Styling changes to: - stop showing all the keywords in headers when too numerous (POR-506 reviewed by Markus) - make keyword links in title white (to be consistent with other header links) - fix alignment in header in occurrence search (POR-566) - make occurrence search title copy that of detail pages, as the search one is designed to have a search box and it looked empty (reviewed by Fede)

--- a/portal-web/trunk/src/main/webapp/less/header.less
+++ b/portal-web/trunk/src/main/webapp/less/header.less
@@ -124,7 +124,7 @@ header {
           content: "";
         }
         a {
-          color: #333333;
+          color: #ffffff;
           &:hover { text-decoration: underline; }
         }
 
